log
Thu May 12 20:13:02 HSP 2022: 
 sudoku.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 49 insertions(+), 2 deletions(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[k]==n->sudo[i][j]) return 0;
      |                       ^
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1.exe: all warnings being treated as errors
Compilation failed
5b44610
Thu May 12 20:14:10 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[k]==n->sudo[i][j]) return 0;
      |                       ^
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1.exe: all warnings being treated as errors
Compilation failed
4d2f865
Thu May 12 20:14:21 HSP 2022: 
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[k]==n->sudo[i][j]) return 0;
      |                       ^
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1.exe: all warnings being treated as errors
Compilation failed
116577e
Thu May 12 20:14:58 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
test.c: In function 'is_valid':
sudoku.c:55:23: error: 'fila' may be used uninitialized in this function [-Werror=maybe-uninitialized]
   55 |           else if(fila[n->sudo[i][j]]==n->sudo[i][j]) return 0;
      |                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
ca31cb9
Thu May 12 20:16:00 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d43b5e4
Thu May 12 20:26:16 HSP 2022: 
test.c:8:40: error: 'str' undeclared here (not in a function)
    8 |     char * aux = (char *)malloc(strlen(str) + 1);
      |                                        ^~~
test.c:9:5: error: data definition has no type or storage class [-Werror]
    9 |     strcpy(aux, str);
      |     ^~~~~~
test.c:9:5: error: type defaults to 'int' in declaration of 'strcpy' [-Werror=implicit-int]
test.c:9:5: error: parameter names (without types) in function declaration [-Werror]
test.c:9:5: error: conflicting types for 'strcpy'
In file included from test.c:3:
c:\mingw\x86_64-w64-mingw32\include\string.h:61:18: note: previous declaration of 'strcpy' was here
   61 |   char * __cdecl strcpy(char * __restrict__ _Dest,const char * __restrict__ _Source);
      |                  ^~~~~~
test.c:10:5: error: expected identifier or '(' before 'return'
   10 |     return aux;
      |     ^~~~~~
test.c:11:1: error: expected identifier or '(' before '}' token
   11 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
69dc602
Thu May 12 20:26:47 HSP 2022: 
test.c:8:40: error: 'str' undeclared here (not in a function)
    8 |     char * aux = (char *)malloc(strlen(str) + 1);
      |                                        ^~~
test.c:9:5: error: data definition has no type or storage class [-Werror]
    9 |     strcpy(aux, str);
      |     ^~~~~~
test.c:9:5: error: type defaults to 'int' in declaration of 'strcpy' [-Werror=implicit-int]
test.c:9:5: error: parameter names (without types) in function declaration [-Werror]
test.c:9:5: error: conflicting types for 'strcpy'
In file included from test.c:3:
c:\mingw\x86_64-w64-mingw32\include\string.h:61:18: note: previous declaration of 'strcpy' was here
   61 |   char * __cdecl strcpy(char * __restrict__ _Dest,const char * __restrict__ _Source);
      |                  ^~~~~~
test.c:10:5: error: expected identifier or '(' before 'return'
   10 |     return aux;
      |     ^~~~~~
test.c:11:1: error: expected identifier or '(' before '}' token
   11 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
23cc8bb
Thu May 12 20:27:10 HSP 2022: 
test.c:8:40: error: 'str' undeclared here (not in a function)
    8 |     char * aux = (char *)malloc(strlen(str) + 1);
      |                                        ^~~
test.c:9:5: error: data definition has no type or storage class [-Werror]
    9 |     strcpy(aux, str);
      |     ^~~~~~
test.c:9:5: error: type defaults to 'int' in declaration of 'strcpy' [-Werror=implicit-int]
test.c:9:5: error: parameter names (without types) in function declaration [-Werror]
test.c:9:5: error: conflicting types for 'strcpy'
In file included from test.c:3:
c:\mingw\x86_64-w64-mingw32\include\string.h:61:18: note: previous declaration of 'strcpy' was here
   61 |   char * __cdecl strcpy(char * __restrict__ _Dest,const char * __restrict__ _Source);
      |                  ^~~~~~
test.c:10:5: error: expected identifier or '(' before 'return'
   10 |     return aux;
      |     ^~~~~~
test.c:11:1: error: expected identifier or '(' before '}' token
   11 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
db0559e
Thu May 12 20:27:54 HSP 2022: 
test.c:8:40: error: 'str' undeclared here (not in a function)
    8 |     char * aux = (char *)malloc(strlen(str) + 1);
      |                                        ^~~
test.c:9:5: error: data definition has no type or storage class [-Werror]
    9 |     strcpy(aux, str);
      |     ^~~~~~
test.c:9:5: error: type defaults to 'int' in declaration of 'strcpy' [-Werror=implicit-int]
test.c:9:5: error: parameter names (without types) in function declaration [-Werror]
test.c:9:5: error: conflicting types for 'strcpy'
In file included from test.c:3:
c:\mingw\x86_64-w64-mingw32\include\string.h:61:18: note: previous declaration of 'strcpy' was here
   61 |   char * __cdecl strcpy(char * __restrict__ _Dest,const char * __restrict__ _Source);
      |                  ^~~~~~
test.c:10:5: error: expected identifier or '(' before 'return'
   10 |     return aux;
      |     ^~~~~~
test.c:11:1: error: expected identifier or '(' before '}' token
   11 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
490431c
